test-infra/auto-deploy/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  # We only need and want a single replica.
  replicas: 1
  selector:
    matchLabels:
      app: update-kfapps
  template:
    metadata:
      labels:
        app: update-kfapps
    spec:
      containers:
      - name: app
        image: gcr.io/kubeflow-ci/auto_deploy
        command:
        - python
        - -m
        - kubeflow.testing.auto_deploy.server
        - serve
        - --config-path=/app/config/deployments.yaml 
        - --job-template-path=/app/config/deploy-kubeflow.yaml 
        - --template-folder=/app/templates
        - --local-dir=/tmp/auto_deploy_src        
        resources:
          requests:
            cpu: 4
            memory: 8Gi
        workingDir: /app
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:      
      - name: config
        configMap:
          # Kustomize will automatically replace the name with the unique name given
          # to the configmap based on the config contents.
          name: config
