test-infra/auto-deploy/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server  
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auto-deploy
  type: ClusterIP
